--- a/backend/composer.json
+++ b/backend/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "laravel/laravel",
-    "description": "The Laravel Framework.",
+    "description": "The Laravel Framework.",                        
     "keywords": ["framework", "laravel"],
     "license": "MIT",
     "type": "project",
@@ -9,7 +9,8 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "tymon/jwt-auth": "~1.0.0-rc.2"
+        "tymon/jwt-auth": "~1.0.0-rc.2",
+        "laravelcollective/html": "~5.4"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
