--- a/backend/composer.json
+++ b/backend/composer.json
@@ -9,8 +9,9 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "tymon/jwt-auth": "~1.0.0-rc.2",
-        "laravelcollective/html": "~5.4"
+        "laravelcollective/html": "~5.4",
+        "nesbot/carbon": "^1.29",
+        "tymon/jwt-auth": "~1.0.0-rc.2"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
