--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,41 +10,49 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "extract": "ng xi18n --output-path src/locale",
-    "start:en" : "ng serve --aot --i18nFile=src/locale/messages.en.xlf --i18nFormat=xlf --locale en",
+    "start:en": "ng serve --aot --i18nFile=src/locale/messages.en.xlf --i18nFormat=xlf --locale en",
     "start:es": "ng serve --aot --i18nFile=src/locale/messages.xlf --i18nFormat=xlf --locale es",
     "start:fr": "ng serve --aot --i18nFile=src/locale/messages.fr.xlf --i18nFormat=xlf --locale fr"
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^5.2.0",
-    "@angular/common": "^5.2.0",
-    "@angular/compiler": "^5.2.0",
-    "@angular/core": "^5.2.0",
-    "@angular/forms": "^5.2.0",
-    "@angular/http": "^5.2.0",
-    "@angular/platform-browser": "^5.2.0",
-    "@angular/platform-browser-dynamic": "^5.2.0",
-    "@angular/router": "^5.2.0",
-    "bootstrap": "^4.1.0",
-    "core-js": "^2.4.1",
+    "@agm/core": "^1.0.0-beta.3",
+    "@angular/animations": "^5.2.11",
+    "@angular/cdk": "^5.2.5",
+    "@angular/common": "^5.2.11",
+    "@angular/compiler": "^5.2.11",
+    "@angular/core": "^5.2.11",
+    "@angular/forms": "^5.2.11",
+    "@angular/http": "^5.2.11",
+    "@angular/material": "^5.2.5",
+    "@angular/platform-browser": "^5.2.11",
+    "@angular/platform-browser-dynamic": "^5.2.11",
+    "@angular/router": "^5.2.11",
+    "bootstrap": "^4.1.2",
+    "chartist": "^0.11.0",
+    "core-js": "^2.5.7",
+    "hammerjs": "^2.0.8",
     "hoek": "^5.0.3",
-    "rxjs": "^5.5.6",
+    "ng-chartist": "^2.0.0-beta.1",
+    "ng-snotify": "^4.3.1",
+    "perfect-scrollbar": "1.1.0",
+    "rxjs": "^5.5.11",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
     "@angular/cli": "~1.7.4",
-    "@angular/compiler-cli": "^5.2.0",
-    "@angular/language-service": "^5.2.0",
-    "@types/jasmine": "~2.8.3",
+    "@angular/compiler-cli": "^5.2.11",
+    "@angular/language-service": "^5.2.11",
+    "@types/jasmine": "^2.8.8",
     "@types/jasminewd2": "~2.0.2",
-    "@types/node": "~6.0.60",
-    "codelyzer": "^4.0.1",
+    "@types/node": "^6.0.114",
+    "codelyzer": "^4.4.2",
     "jasmine-core": "~2.8.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~2.0.0",
+    "karma": "^2.0.4",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "^1.2.1",
-    "karma-jasmine": "~1.1.0",
+    "karma-coverage-istanbul-reporter": "^1.4.3",
+    "karma-jasmine": "^1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~4.1.0",
