--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,7 +23,6 @@
     "@angular/compiler": "^8.0.1",
     "@angular/core": "^8.0.1",
     "@angular/forms": "^8.0.1",
-    "@angular/http": "^7.2.15",
     "@angular/material": "^8.0.1",
     "@angular/platform-browser": "^8.0.1",
     "@angular/platform-browser-dynamic": "^8.0.1",
@@ -37,16 +36,18 @@
     "ng-snotify": "^4.3.1",
     "perfect-scrollbar": "1.4.0",
     "rxjs": "^6.5.2",
-    "zone.js": "^0.9.1"
+    "tslib": "^1.9.0",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.800.0",
     "@angular/cli": "^8.0.3",
     "@angular/compiler-cli": "^8.0.1",
     "@angular/language-service": "^8.0.1",
     "@types/jasmine": "^3.3.13",
     "@types/jasminewd2": "^2.0.6",
     "@types/node": "^12.0.8",
-    "codelyzer": "^5.1.0",
+    "codelyzer": "^5.0.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "^4.1.0",
@@ -57,6 +58,6 @@
     "protractor": "~5.4.2",
     "ts-node": "~8.3.0",
     "tslint": "~5.17.0",
-    "typescript": "~3.5.2"
+    "typescript": "^3.4.5"
   }
 }
