--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,6 +34,7 @@
     "hoek": "^6.1.3",
     "ng-chartist": "^4.1.0",
     "ng-snotify": "^4.3.1",
+    "ngx-pipes": "^2.5.1",
     "perfect-scrollbar": "1.4.0",
     "rxjs": "^6.5.2",
     "tslib": "^1.9.0",
