--- a/back/package.json
+++ b/back/package.json
@@ -9,8 +9,10 @@
   "author": "Gustavo Gonzalez",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.19.0",
+    "connect-flash": "^0.1.1",
     "express": "^4.17.1",
     "express-session": "^1.16.1",
     "jsonwebtoken": "^8.5.1",
